# nethsm-pkcs11

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.txt  LICENSE_NICLabs.txt  README.md  application.go  attribute.go  build.sh  connection.go  context.go  context_ecdsa.go  context_rsa.go  crypto_object.go  dtc.go  dtc_ecdsa.go  dtc_rsa.go  features.md  generator_conf.yaml  go.mod  go.sum  lcov.info  main.go  mechanism.go  p11nethsm-config.yaml  p11nethsm.conf  p11nethsm.example.conf  padding_pkcs1v15.go  padding_pss.go  pkcs11.go  pkcs11t.h  readme.md  session.go  slot.go  sqlite3.go  sqlite3_stmts.go  sqlite_test.go  (+5 more)
.cargo/: audit.toml
api/: .openapi-generator-ignore  Cargo.toml  README.md  api_default.go  client.go  configuration.go  model_backup_passphrase_config.go  model_decrypt_data.go  model_decrypt_mode.go  model_decrypt_request_data.go  model_distinguished_name.go  model_health_state_data.go  model_info_data.go  model_key_algorithm.go  model_key_generate_request_data.go  model_key_item.go  model_key_mechanism.go  model_key_private_data.go  model_key_public_data.go  model_key_type.go  model_log_level.go  model_logging_config.go  model_network_config.go  model_private_key.go  model_provision_request_data.go  model_public_key.go  model_random_data.go  model_random_request_data.go  model_sign_data.go  model_sign_mode.go  model_sign_request_data.go  model_switch.go  model_system_info.go  model_system_state.go  model_system_update_data.go  model_time_config.go  model_unattended_boot_config.go  model_unlock_passphrase_config.go  model_unlock_request_data.go  model_user_data.go  (+6 more)
api/.openapi-generator/: FILES
api/api/: openapi.yaml
api/docs/: DecryptData.md  DecryptMode.md  DecryptRequestData.md  DefaultApi.md  EncryptRequestData.md  KeyAlgorithm.md  KeyGenerateRequestData.md  KeyItem.md  KeyMechanism.md  KeyPrivateData.md  KeyRestrictions.md  KeyType.md  LogLevel.md  LoggingConfig.md  PrivateKey.md  ProvisionRequestData.md  PublicKey.md  SignData.md  SignMode.md  SignRequestData.md  Switch.md  SystemInfo.md  SystemState.md  SystemUpdateData.md  TimeConfig.md  TlsKeyType.md  UnlockPassphraseConfig.md  UserData.md  UserPassphrasePostData.md  UserPostData.md  UserRole.md
api/src/apis/: default_api.rs
api/src/models/: backup_passphrase_config.rs  decrypt_mode.rs  distinguished_name.rs  encrypt_data.rs  health_state_data.rs  info_data.rs  key_item.rs  key_private_data.rs  key_public_data.rs  key_restrictions.rs  key_type.rs  logging_config.rs  private_key.rs  public_key.rs  random_data.rs  sign_data.rs  switch.rs  system_state.rs  system_update_data.rs  time_config.rs  tls_key_generate_request_data.rs  tls_key_type.rs  unattended_boot_config.rs  unlock_passphrase_config.rs  unlock_request_data.rs  user_item.rs  user_post_data.rs  user_role.rs
certs/: key.json  server.pem
config/: config.go  general.go  sqlite3.go  zmq.go
core/: application.go  attribute.go  c_attribute.go  c_crypto_object.go  c_mechanism.go  c_session.go  c_slot.go  c_token.go  connection.go  context.go  context_ecdsa.go  context_rsa.go  crypto_object.go  dtc.go  dtc_ecdsa.go  dtc_rsa.go  log.go  mechanism.go  module.go  p11_error.go  padding_pkcs1v15.go  padding_pss.go  pkcs11.go  pkcs11_const.go  pkcs11_strings.go  pkcs11_types.go  session.go  slot.go  sqlite3.go  sqlite3_stmts.go  sqlite_test.go  storage.go  tcb_error.go  token.go
dummy/: functionList.c  pkcs11.go  pkcs11go.h
fork-tests/: Makefile  fork_test.c
log/: log.go
module/: attribute.go  context.go  context_ecdsa.go  context_rsa.go  crypto_object.go  mechanism.go  module.go  p11_error.go  padding_pkcs1v15.go  padding_pss.go  pkcs11_const.go  pkcs11_strings.go  pkcs11_types.go  session.go  slot.go  token.go  ulong.go
network/: connection.go
openapi/: Cargo.toml  README.md  api_default.go  client.go  configuration.go  model_backup_passphrase_config.go  model_decrypt_data.go  model_decrypt_mode.go  model_decrypt_request_data.go  model_distinguished_name.go  model_health_state_data.go  model_info_data.go  model_inline_object.go  model_inline_object_1.go  model_inline_object_10.go  model_inline_object_11.go  model_inline_object_12.go  model_inline_object_2.go  model_inline_object_3.go  model_inline_object_4.go  model_inline_object_5.go  model_inline_object_6.go  model_inline_object_7.go  model_inline_object_8.go  model_inline_object_9.go  model_inline_response_200.go  model_inline_response_200_1.go  model_inline_response_200_2.go  model_inline_response_200_3.go  model_key_algorithm.go  model_key_generate_request_data.go  model_key_item.go  model_key_mechanism.go  model_key_private_data.go  model_key_public_data.go  model_key_purpose.go  model_log_level.go  model_logging_config.go  model_network_config.go  model_private_key.go  (+26 more)
pkcs11/: Cargo.toml  build.rs  c_attribute.go  c_crypto_object.go  c_mechanism.go  c_session.go  c_slot.go  c_token.go  cutils.go  pkcs11.go  version.rc
pkcs11/config_file/: Cargo.toml
pkcs11/config_file/src/: lib.rs
pkcs11/src/: data.rs  defs.rs  lib.rs  threads.rs  unwind_stubs.rs  ureq.rs  utils.rs
pkcs11/src/api/: decrypt.rs  digest.rs  encrypt.rs  generation.rs  key.rs  mod.rs  object.rs  pin.rs  session.rs  sign.rs  token.rs  verify.rs
pkcs11/src/backend/: client.rs  decrypt.rs  encrypt.rs  events.rs  key.rs  login.rs  mechanism.rs  mod.rs  object.rs  session.rs  sign.rs  slot.rs  slot_config.rs
pkcs11/src/backend/db/: attr.rs  mod.rs  object.rs
pkcs11/src/config/: config_file.rs  device.rs  initialization.rs  logging.rs  mod.rs
pkcs11/src/ureq/: rustls_connector.rs  tcp_connector.rs  utils.rs
pkcs11/tests/: basic.rs
pkcs11/tests/tools/: mod.rs
tools/: 0001-patch-openapi.patch  build_profiling.sh  ci_integration_tests.sh  ci_setup.sh  collect_licenses.sh  create_aes_key.sh  create_brainpool_keys.sh  create_ec_key.sh  create_ec_p224_key.sh  create_ec_p256_key.sh  create_ec_p256k1_key.sh  create_ec_p384_key.sh  create_ec_p521_key.sh  create_ed_key.sh  create_key.sh  create_operator.sh  create_rsa_key.sh  create_web_key.sh  der_cert.conf  (+24 more)
(+230 files in other folders)
