[package]
name = "nethsm_pkcs11"
version = "1.3.0"
edition = "2021"

[lib]
name = "nethsm_pkcs11"
crate-type = ["cdylib"]

[dependencies]
env_logger = { default-features = false, version = "0.10.0", features = [
  "auto-color",
  "humantime",
] }
cryptoki-sys = "0.1.6"
log = "0.4.19"
merge = { features = [
  "derive",
  "std",
], default-features = false, version = "0.1.0" }
serde = { version = "1", features = ["derive"], default-features = false }
serde_yaml = "0.9.22"
serde_json = { default-features = false, version = "1.0.64" }
lazy_static = "1.4.0"
nethsm-sdk-rs = { version = "1.0" }
rustls = { version = "0.23", default-features = false }
rustls-native-certs = "0.7"
base64ct = { version = "1.6", default-features = false }
hex = "0.4"
der = { version = "0.7", default-features = false }
pem-rfc7468 = "0.7"
x509-cert = { features = ["pem"], default-features = false, version = "0.2" }
sha2 = { default-features = false, version = "0.10" }
sha1 = { default-features = false, version = "0.10" }
digest = { default-features = false, version = "0.10" }
rayon = "1.8.0"
syslog = "6.1.0"
thiserror = "1.0.63"

# Needed to prevent breaking change with rustls updates
ureq = { version = "2.10", default-features = false }

[dev-dependencies]
hex-literal = "0.4.1"
