[package]
name = "nethsm_pkcs11"
version = "2.0.0"
edition = "2021"

[lib]
name = "nethsm_pkcs11"
crate-type = ["cdylib"]

[dependencies]
env_logger = { default-features = false, version = "0.11.7", features = ["auto-color", "humantime"] }
cryptoki-sys = "0.4.0"
log = "0.4.19"
serde = { version = "1", features = ["derive"], default-features = false }
serde_yaml = "0.9.22"
serde_json = { default-features = false, version = "1.0.64" }
lazy_static = "1.4.0"
nethsm-sdk-rs = "3"
rustls = { version = "0.23", default-features = false }
rustls-native-certs = "0.8"
base64ct = { version = "1.6", default-features = false }
hex = "0.4"
der = { version = "0.7", default-features = false }
pem-rfc7468 = "0.7"
x509-cert = { features = ["pem"], default-features = false, version = "0.2" }
sha2 = { default-features = false, version = "0.10" }
sha1 = { default-features = false, version = "0.10" }
digest = { default-features = false, version = "0.10" }
rayon = "1.8.0"
syslog = "6.1.1"
thiserror = "2.0.12"
arc-swap = "1.7.1"
hex-literal = "1.0.0"
md-5 = "0.10.6"

config_file = { path = "config_file" }

# Needed to prevent breaking change with rustls updates
ureq = { version = "=3.1.2", default-features  = false }
rustls-pki-types = "1.11.0"
socket2 = { version = "0.6", features = ["all"] }

[dev-dependencies]
once_cell = "1.19.0"
pkcs11 = "0.5.0"
tempfile = "3.12.0"
test-log = "0.2.16"
time = "0.3.36"
tokio = {version = "1", default-features = false, features = ["net", "sync", "rt", "io-util", "time"] }

[features]
pkcs11-full-tests = []
default = []
